nsIDOMWindowUtils.getUnanimatedComputedStyle throws NS_ERROR_FAILURE when called with custom property
Categories
(DevTools :: Inspector, defect)
Tracking
(firefox-esr115 unaffected, firefox122 unaffected, firefox123 disabled, firefox124 fixed)
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox122 | --- | unaffected |
| firefox123 | --- | disabled |
| firefox124 | --- | fixed |
People
(Reporter: nchevobbe, Assigned: zrhoffman)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
The following expression throws
DOMWindowUtils.getUnanimatedComputedStyle(
document.body,
null,
"--custom",
DOMWindowUtils.FLUSH_NONE
)
(can be triggered by going to https://ffx-devtools-at-property.glitch.me/ , opening the animation panel and selecting a div)
| Reporter | ||
Comment 1•2 years ago
|
||
Zach, is this something similar to Bug 1875441 ?
| Assignee | ||
Comment 2•2 years ago
|
||
Oops, the custom property in nsDOMWindowUtils::GetUnanimatedComputedStyle should have the -- prefix removed, similar to <https://searchfox.org/mozilla-central/rev/cee2c396081d950f9e3401113fb179999e404ab8/dom/animation/KeyframeUtils.cpp#577-578>. Patch incoming...
| Assignee | ||
Comment 3•2 years ago
|
||
Including the -- prefix in custom property names caused
Servo_ComputedValues_ExtractAnimationValue to not find custom properties
that nsDOMWindowUtils::GetUnanimatedComputedStyle passed.
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 5•2 years ago
|
||
Set release status flags based on info from the regressing bug 1846516
Comment 6•2 years ago
|
||
| bugherder | ||
Comment 7•2 years ago
|
||
The patch landed in nightly and beta is affected.
:zrhoffman, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox123towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 8•2 years ago
•
|
||
Nicolas, would this be useful to uplift or no?
| Reporter | ||
Comment 9•2 years ago
|
||
(In reply to Zach Hoffman [:zrhoffman] from comment #8)
Nicolas, would this be useful to uplift or no?
No it's fine I think, animating custom properties is tied to layout.css.properties-and-values.enabled, which is still Nightly only
Updated•2 years ago
|
Description
•