Bug 1876496 - Remove prefix from custom property name passed to AnimatedPropertyID r=nchevobbe,emilio

Including the `--` prefix in custom property names caused
Servo_ComputedValues_ExtractAnimationValue to not find custom properties
that nsDOMWindowUtils::GetUnanimatedComputedStyle passed.

Differential Revision: https://phabricator.services.mozilla.com/D199714